--- a/css/common.css
+++ b/css/common.css
@@ -125,6 +125,7 @@ footer {
 header {
   background-color: rgba(0, 0, 0, 0.217);
   min-height: 90px;
+  margin: 0 0 50px 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
